# cryonogen

./: .gitignore  Dockerfile  Pipfile  README.md  backup.sh  cryoserve.go  package.json  pyproject.toml  to-sqlite.py
cryo/: __init__.py  box_manifest.py  env.py  flask.py  main.py  vial_manifest.py
cryosrc/: __init__.py  flask.py  main.py  manifest.py
frontend/: index.html  vials.html
frontend/boxes/: 5-5.html  8-8.html  9-9.html
frontend/css/: source.scss  style.css  style.css.map
frontend/js/: api.js  box-info.js  box-list.js  cells.js  vials-search.js
frontend/js/mod/: alpine.esm.js  fuse.esm.js
