[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cryonogen"
version = "0.2.0"
description = "Cryonogen"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "Flask-Cors==4.0.0",
    "pandas==2.1.4",
    "openpyxl==3.1.2"
]

[tool.setuptools]
packages = ["cryo"]

[project.scripts]
cryo = "cryo.main:cli"
